--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-   
+
     <script type="module" src="./index.mjs"></script>
     <script type="module" src="./tabs.mjs"></script>
 
@@ -16,35 +16,48 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <ul>
-                <li><button class="fa-solid fa-plus" id="add-icon"></button></li>
-                <li><button id="alltab">All</button></li>
-                <li><button id="todotab">Todos</button></li>
-                <li><button id="completedtab">Completed</button></li>
-                <li><button id="missedtab">Missed</button></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="loggedin" style="display:none">
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><button class="fa-solid fa-plus" id="add-icon"></button></li>
+                    <li><button id="alltab">All</button></li>
+                    <li><button id="todotab">Todos</button></li>
+                    <li><button id="completedtab">Completed</button></li>
+                    <li><button id="missedtab">Missed</button></li>
+                    <li><button id="loggedinemail"></button></li>
+                    <li><button id="signout-btn" style="margin-right: 3px !important;">sign out</button></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div class="loader" id="loader"></div>
+        <div class="loader" id="loader"></div>
 
-    <div> 
-        <div class="addtask" style= "display : none">
-        <input placeholder="Todo Tasks" id="taskinput" autocomplete="off">
-        <input id="tasktime" type="datetime-local">
-        <button id="add-btn">Save</button>
+        <div>
+            <div class="addtask" style="display : none">
+                <input placeholder="Todo Tasks" id="taskinput" autocomplete="off">
+                <input id="tasktime" type="datetime-local">
+                <button id="add-btn">Save</button>
+            </div>
+        </div>
+
+
+        <div class="todo-container">
+            <ul id="todolist_p" class="pending"></ul>
+            <ul id="todolist_m" class="missed"></ul>
+            <ul id="todolist_d" class="completed"></ul>
+        </div>
+
     </div>
-</div>
-   
+    <div id="loggedout" style="display: none">
+        <div id="auth">
+            <input type="email" placeholder="Email Id" id="email">
+            <input type="password" placeholder="Password" id="password">
+            <button id="signup-btn">sign up</button>
+            <button id="signin-btn">sign in</button>
 
-    <div class="todo-container">
-        <ul id="todolist_p" class="pending"></ul>
-        <ul id="todolist_m" class="missed"></ul>
-        <ul id="todolist_d" class="completed"></ul>
+        </div>
     </div>
-
 </body>
 
 </html>
