--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../src/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-    <script type="module" src="./index.mjs"></script>
-    <script type="module" src="./tabs.mjs"></script>
+    <script type="module" src="../src/index.mjs"></script>
 
     <title>Todo</title>
 </head>
@@ -31,7 +30,7 @@
             </nav>
         </header>
 
-        <div class="loader" id="loader"></div>
+    <img src="../public/images/loading.gif" id="loader">
 
         <div>
             <div class="addtask" style="display : none">
