--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../src/css/index.css">
+    <link rel="stylesheet" href="./src/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-    <script type="module" src="../src/index.mjs"></script>
+    <script type="module" src="./src/index.mjs"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
     <title>Todo</title>
@@ -31,7 +31,7 @@
             </nav>
         </header>
 
-        <img src="../public/images/loading.gif" id="loader">
+        <img src="./loading.gif" id="loader">
 
         <div>
             <div class="addtask" style="display : none">
